# YuProjectHub

./: Hello.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/antony/antonyproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/adapter/: BaseFragmentPagerAdapter.java
app/src/main/java/base/: BaseActivity.java  BaseApplication.java  BaseArrayBean.java  BaseContract.java  BaseFragment.java  BaseMvpActivity.java  BaseMvpFragment.java  BaseObjectBean.java  BasePresenter.java  BaseView.java
app/src/main/java/bean/: LoginBean.java
app/src/main/java/com/antony/antonyproject/: JNITools.java  JniDemoActivity.java  MainActivity.java
app/src/main/java/com/antony/antonyproject/login/: LogInActivity.java  LogInContract.java  LogInModel.java  LogInPresenter.java
app/src/main/java/com/antony/antonyproject/main/: MainActivity.java  (+3 more)
app/src/main/java/jni/: Android.mk  jnitools.c
app/src/main/java/ndk/: NdkTools.java
app/src/main/res/drawable/: main_discover_selector.xml  main_friends_selector.xml  main_music_selector.xml  oval_shaped_na_header_drawable.xml  titlebar_disco.xml
app/src/main/res/layout/: activity_jni_demo.xml  activity_log_in.xml  activity_main.xml  fragment_one_layout.xml  layout_navigation_header.xml  main_classify_layout.xml  main_tab_item_layout.xml  main_toolbar_layout.xml  main_toolbar_layout_two.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/antony/antonyproject/: ExampleUnitTest.java
(+6 files in other folders)
